feat: Refactor AuthController and related services for improved authentication flow and DTO usage